--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,19 @@
     "dev": "vite",
     "prebuild": "set NODE_ENV=production && node scripts/generate-config.cjs",
     "build": "vite build",
-    "lint": "eslint . --ext js,jsx,ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "npx eslint src --ext .js,.jsx",
     "test": "vitest",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "prettier --write",
+      "eslint --fix"
+    ],
+    "*.{json,md,css}": [
+      "prettier --write"
+    ]
   },
   "dependencies": {
     "axios": "^1.6.0",
@@ -34,7 +44,10 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "husky": "^9.1.7",
     "jsdom": "^27.1.0",
+    "lint-staged": "^16.2.6",
+    "prettier": "^3.6.2",
     "typescript-eslint": "^8.46.4",
     "vite": "^5.0.0",
     "vitest": "^4.0.8"
