--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "@eslint/js": "^9.39.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
+    "@types/jest": "^30.0.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^8.46.4",
@@ -45,9 +46,11 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
     "husky": "^9.1.7",
+    "jest": "^30.2.0",
     "jsdom": "^27.1.0",
     "lint-staged": "^16.2.6",
     "prettier": "^3.6.2",
+    "ts-jest": "^29.4.5",
     "typescript-eslint": "^8.46.4",
     "vite": "^5.0.0",
     "vitest": "^4.0.8"
