--- a/.github/workflows/frontend-ci.yaml
+++ b/.github/workflows/frontend-ci.yaml
@@ -36,7 +36,7 @@ jobs:
           fetch-depth: 0  # Fetch all history for all branches and tags 
       
       - name: Use Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: '18'  #specify node version
           cache: 'npm'  #cache npm dependencies
@@ -60,8 +60,8 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Use up Node.js
-        uses: actions/checkout@v4
+      - name: Use  Node.js
+        uses: actions/setup-node@v4
         with: 
           node-version: '18'
           cache: 'npm'
@@ -72,7 +72,7 @@ jobs:
 
       - name: Run tests
         working-directory: frontend
-        run: npm test -- watchAll=false
+        run: npm test -- --watch=false
 
   Build:
     name: Build Docker Image
