--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,19 +8,11 @@
     "dev": "vite",
     "prebuild": "set NODE_ENV=production && node scripts/generate-config.cjs",
     "build": "vite build",
-    "lint": "npx eslint src --ext .js,.jsx",
-    "test": "vitest",
-    "preview": "vite preview",
-    "prepare": "husky"
-  },
-  "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
-      "prettier --write",
-      "eslint --fix"
-    ],
-    "*.{json,md,css}": [
-      "prettier --write"
-    ]
+    "lint": "eslint . --ext js,jsx,ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui",
+    "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.6.0",
