--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "dev": "vite",
     "prebuild": "set NODE_ENV=production && node scripts/generate-config.cjs",
     "build": "vite build",
-    "lint": "eslint . --ext js,jsx,ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "npx eslint src --ext .js,.jsx",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
