--- a/.github/workflows/frontend-ci.yaml
+++ b/.github/workflows/frontend-ci.yaml
@@ -23,6 +23,11 @@ concurrency:
   group: frontend-ci-${{ github.ref }} #Groups all runs for this workflow + this branch.
   cancel-in-progress: true #Cancels the previous run when a new commit arrives.
 
+permissions:
+  contents: read
+  security-events: write
+  packages: write
+
 #workflow jobs
 jobs:
   Lint: #Job name
@@ -84,7 +89,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up docker buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
 
       - name: Build Docker Image
         run : |
@@ -100,7 +105,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: frontend-image
-          path: frontend-image.tar
+          path: frontend_ci_build.tar
 
   Scan-Image:
     name: Scan Docker Image
@@ -115,16 +120,18 @@ jobs:
 
       - name: Load Docker Image
         run: | 
-          docker load -i frontend-image.tar
+          docker load -i frontend_ci_build.tar
 
       - name: Run Trivy vulnurability scan
-        uses: aquasecurity/trivy-action@v0.33.1
+        uses: aquasecurity/trivy-action@0.28.0
         with:
           image-ref: frontend:ci-build
           format: 'table'
           exit-code: '1'
+          ignore-unfixed: true
           vuln-type: 'os,library'
           severity: 'CRITICAL,HIGH'
+          output: 'trivy-report.txt'
 
       # Optional step to upload the Trivy report as an artifact
       - name: Upload Trivy report (optional)
@@ -142,16 +149,16 @@ jobs:
 
     steps:
       - name: Download image artifact   
-        uses: actions/downlad-artifact@v4
+        uses: actions/download-artifact@v4
         with:
           name: frontend-image
 
       - name: Load Docker Image
         run: | 
-          docker load -i frontend-image.tar
+          docker load -i frontend_ci_build.tar
 
       - name: Docker Hub login
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
@@ -162,7 +169,7 @@ jobs:
 
       - name : Push Docker image
         run: |
-          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/ecom-frontend:${secrets.IMAGE_TAG_VERSION} 
+          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/ecom-frontend:${{ secrets.IMAGE_TAG_VERSION }} 
 
   Notify-On_Telegram:
     name: Notify on Telegram
