--- a/.github/workflows/frontend-ci.yaml
+++ b/.github/workflows/frontend-ci.yaml
@@ -171,7 +171,7 @@ jobs:
         run: |
           docker push ${{ secrets.DOCKER_HUB_USERNAME }}/ecom-frontend:${{ secrets.IMAGE_TAG_VERSION }} 
 
-    Notify-On-Telegram:
+  Notify-On-Telegram:   # ← must be OUTSIDE the previous job
     name: Notify on Telegram
     runs-on: ubuntu-latest
     needs: [Lint, Test, Build, Scan-Image]
