--- a/.github/workflows/frontend-ci.yaml
+++ b/.github/workflows/frontend-ci.yaml
@@ -171,7 +171,7 @@ jobs:
         run: |
           docker push ${{ secrets.DOCKER_HUB_USERNAME }}/ecom-frontend:${{ secrets.IMAGE_TAG_VERSION }} 
 
-  Notify-On-Telegram:   # ← must be OUTSIDE the previous job
+  Notify-On-Telegram:
     name: Notify on Telegram
     runs-on: ubuntu-latest
     needs: [Lint, Test, Build, Scan-Image]
@@ -183,9 +183,17 @@ jobs:
           to: ${{ secrets.TELEGRAM_CHAT_ID }}
           token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           message: |
-            Frontend CI Pipeline Result:
-            Lint: ${{ needs.Lint.result }}
-            Test: ${{ needs.Test.result }}
-            Build: ${{ needs.Build.result }}
-            Scan Image: ${{ needs.Scan-Image.result }}
-            Push to Docker Hub: ${{ needs.Push-To-Docker-Hub.result || 'skipped' }}
+            ⚙️ *Frontend CI Pipeline Result*
+
+            • **Lint:** ${{ needs.Lint.result }}
+            • **Test:** ${{ needs.Test.result }}
+            • **Build:** ${{ needs.Build.result }}
+            • **Scan Image:** ${{ needs["Scan-Image"].result }}
+
+            • **Push to Docker Hub:** ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' 
+                && needs["Push-To-Docker-Hub"].result 
+                || 'skipped' }}
+
+            🔁 *Branch:* `${{ github.ref_name }}`
+            👤 *Triggered by:* `${{ github.actor }}`
+            📦 *Repository:* `${{ github.repository }}`
