--- a/.github/workflows/frontend-ci.yaml
+++ b/.github/workflows/frontend-ci.yaml
@@ -188,7 +188,7 @@ jobs:
             • **Lint:** ${{ needs.Lint.result }}
             • **Test:** ${{ needs.Test.result }}
             • **Build:** ${{ needs.Build.result }}
-            • **Scan Image:** ${{ needs["Scan-Image"].result }}
+            • **Scan Image:** ${{ needs.Scan-Image.result }}
 
             • **Push to Docker Hub:** ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' 
                 && needs["Push-To-Docker-Hub"].result 
