ci(workflow): Fix frontend CI workflow notification configuration
- Corrected GitHub Actions workflow syntax for Docker Hub push result
- Fixed nested result reference in Telegram notification message
- Ensured consistent and correct job result reporting
- Improved workflow configuration readability

--- a/.github/workflows/frontend-ci.yaml
+++ b/.github/workflows/frontend-ci.yaml
@@ -191,7 +191,7 @@ jobs:
             • **Scan Image:** ${{ needs.Scan-Image.result }}
 
             • **Push to Docker Hub:** ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' 
-                && needs["Push-To-Docker-Hub"].result 
+                && needs.Push-To-Docker-Hub.result 
                 || 'skipped' }}
 
             🔁 *Branch:* `${{ github.ref_name }}`
