--- a/.github/workflows/frontend-ci.yaml
+++ b/.github/workflows/frontend-ci.yaml
@@ -142,7 +142,6 @@ jobs:
         if: always()
 
   Push-To-Docker-Hub:
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     name: Push Frontend Image to Docker Hub
     runs-on: ubuntu-latest
     needs: Scan-Image
@@ -150,10 +149,12 @@ jobs:
     steps:
       - name: Download image artifact   
         uses: actions/download-artifact@v4
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         with:
           name: frontend-image
 
       - name: Load Docker Image
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: | 
           docker load -i frontend_ci_build.tar
 
@@ -164,17 +165,20 @@ jobs:
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
       
       - name : Tag Docker image
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: |
           docker tag frontend:ci-build ${{ secrets.DOCKER_HUB_USERNAME }}/ecom-frontend:${{ secrets.IMAGE_TAG_VERSION}}
 
       - name : Push Docker image
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: |
           docker push ${{ secrets.DOCKER_HUB_USERNAME }}/ecom-frontend:${{ secrets.IMAGE_TAG_VERSION }} 
 
   Notify-On-Telegram:
     name: Notify on Telegram
     runs-on: ubuntu-latest
-    needs: [Lint, Test, Build, Scan-Image]
+    needs: [Lint, Test, Build, Scan-Image, Push-To-Docker-Hub]
+    if: always()
 
     steps:
       - name: Send Telegram Notification
@@ -185,15 +189,15 @@ jobs:
           message: |
             ⚙️ *Frontend CI Pipeline Result*
 
-            • **Lint:** ${{ needs.Lint.result }}
-            • **Test:** ${{ needs.Test.result }}
-            • **Build:** ${{ needs.Build.result }}
-            • **Scan Image:** ${{ needs.Scan-Image.result }}
+            🧹 Lint Test: ${{ needs.Lint.result }}
+            🧪 Unit Test: ${{ needs.Test.result }}
+            🔨 Docker Image Build: ${{ needs.Build.result }}
+            🛡️ Image Scan: ${{ needs.Scan-Image.result }}
 
-            • **Push to Docker Hub:** ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' 
+            🐳 Push to Docker Hub: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' 
                 && needs.Push-To-Docker-Hub.result 
                 || 'skipped' }}
 
             🔁 *Branch:* `${{ github.ref_name }}`
-            👤 *Triggered by:* `${{ github.actor }}`
+            🧑‍💻 *Triggered by:* `${{ github.actor }}`
             📦 *Repository:* `${{ github.repository }}`
