--- a/.github/workflows/frontend-ci.yaml
+++ b/.github/workflows/frontend-ci.yaml
@@ -174,6 +174,19 @@ jobs:
         run: |
           docker push ${{ secrets.DOCKER_HUB_USERNAME }}/ecom:frontend-${{ secrets.IMAGE_TAG_VERSION }} 
 
+  Release:
+    name: Create Github Release
+    runs-on: ubuntu-latest
+    needs: [Lint,Test,Build,Scan-Image,Push-To-Docker-Hub]
+    if: startsWith(github.ref, 'refs/tags/')
+
+    steps:
+      - name: Create Github Release
+        uses: softprops/action-gh-release@v2
+        with:
+          generate_release_notes: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   Notify-On-Telegram:
     name: Notify on Telegram
     runs-on: ubuntu-latest
