ci(backend): Implement CI pipeline for lint, test, and build
This commit introduces a comprehensive Continuous Integration (CI) workflow for the backend service using GitHub Actions. The new pipeline automates quality checks on every pull request.

The workflow consists of three sequential jobs:
- **Lint:** Checks the code for style and formatting errors.
- **Test:** Installs dependencies and runs the test suite using Jest.
- **Build:** Constructs a Docker image of the backend application and uploads it as a build artifact for later use.

Additionally, the workflow is configured with concurrency controls to automatically cancel in-progress runs on the same branch, saving runner minutes. Explicit permissions have been set for the workflow to enhance security. The package-lock.json has been updated to include new dev dependencies required for testing.

--- a/.github/workflows/frontend-ci.yaml
+++ b/.github/workflows/frontend-ci.yaml
@@ -21,7 +21,7 @@ on:
 #workflow settings - This prevents multiple runs from piling up when you push several commits quickly.
 concurrency: 
   group: frontend-ci-${{ github.ref }} #Groups all runs for this workflow + this branch.
-  cancel-in-progress: true #Cancels the previous run when a new commit arrives.
+  cancel-in-progress: true #Cancels the previous run when a new commit arrives in short time interval (the old ci is not done yet).
 
 permissions:
   contents: read
