--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -9,13 +9,14 @@ on:
     paths:
       - "backend/**"
       - ".github/workflows/backend-ci.yaml"
+concurrency:
+  group: backend-ci-${{ github.ref }}
+  cancel-in-progress: true
 
-  push:
-    branches:
-      - main
-    paths:
-      - "backend/**"
-      - ".github/workflows/backend-ci.yaml"
+permissions:
+  contents: read
+  security-events: write
+  packages: write
 
 jobs: 
   Lint:
@@ -25,16 +26,98 @@ jobs:
     steps: 
       - name: Checkout code 
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name : setup node
         uses: actions/setup-node@v4
         with: 
           node-version: '20'
-          
+          cache: 'npm'
+      
+      - name: Install dependencies
+        working-directory: backend
+        run: npm ci
 
+      - name : Run Lint
+        working-directory: backend
+        run: npm run lint
 
+  Test:
+    name: Test Backend
+    runs-on: ubuntu-latest
+    needs: Lint
 
+    steps:
+      - name: checkout repository
+        uses: actions/checkout@v4
+        with: 
+          fetch-depth: 0
 
+      - name: Use Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
 
-    
+      - name: Install dependencies
+        working-directory: backend
+        run: npm ci
 
+      - name: Run Test
+        working-directory: backend
+        run: npm test -- --watch=false
+
+  Build: 
+    name: Build Docker image
+    runs-on: ubuntu-latest
+    needs: Test
+
+    steps:
+      - name: checkout repository
+        uses: actions/checkout@v4
+
+      - name: set up docker buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build Docker image
+        run: |
+          docker build \
+          -t backend:ci-build \
+          ./backend
+
+      - name: Save image as artifact
+        run: |
+          docker save backend:ci-build -o backend_build_ci.tar
+
+      - name: Upload image as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: backend-image
+          path: backend_build_ci.tar
+
+  Scan-Image:
+    name: Scan Docker Image
+    runs-on: ubuntu-latest
+    needs: Build
+
+    steps:
+      - name: Download Image Artifact
+        uses: actions/download-artifact@v3
+        with: 
+          name: backend-image
+      
+      - name: Load Docker Image
+        run: |
+          docker load -i backend_ci_build.tar
+      
+      - name: Run Trivy Scan
+        uses: aquasecurity/trivy-action@0.28.0
+        with:
+          image-ref: backend-ci-build
+          format: 'table'
+          exit-code: '1'
+          ignore-unfixed: true
+          vuln-type: 'os,library'
+          severity: 'CRITICAL,HIGH'
+          output: 'trivy-report.txt'
