--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-jest": "^29.1.0",
     "globals": "^16.5.0",
     "jest": "^30.2.0",
+    "mongodb-memory-server": "^10.3.0",
     "nodemon": "^3.0.1",
     "supertest": "^7.1.4"
   }
