--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -6,6 +6,7 @@ on:
   pull_request:
     branches:
       - develop
+      - main
     paths:
       - "backend/**"
       - ".github/workflows/backend-ci.yaml"
