--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -104,7 +104,7 @@ jobs:
 
     steps:
       - name: Download Image Artifact
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with: 
           name: backend-image
       
@@ -122,3 +122,27 @@ jobs:
           vuln-type: 'os,library'
           severity: 'CRITICAL,HIGH'
           output: 'trivy-report.txt'
+      
+  Notify-On-Telegram:
+    name: Notify on Telegram
+    runs-on: ubuntu-latest
+    needs: [Lint, Test, Build, Scan-Image]
+    if: always()
+
+    steps:
+      - name: Send Telegram Notification
+        uses: appleboy/telegram-action@v0.1.0
+        with:
+          to: ${{ secrets.TELEGRAM_CHAT_ID }}
+          token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          message: |
+            ⚙️ Pull Request Notifier From Backend CI
+
+            🧹 Lint Test: ${{ needs.Lint.result }}
+            🧪 Unit Test: ${{ needs.Test.result }}
+            🔨 Docker Image Build: ${{ needs.Build.result }}
+            🛡️ Image Scan: ${{ needs.Scan-Image.result }}
+
+            🔁 Branch: `${{ github.ref_name }}`
+            🧑‍💻 Triggered by: `${{ github.actor }}`
+            📦 Repository: `${{ github.repository }}`
