fix(ci): Correct Docker image filename in backend workflow
This commit corrects a typo in the filename used by the `docker load` command within the backend CI workflow. The filename has been changed from `backend_ci_build.tar` to `backend_build_ci.tar` to match the artifact produced in the build step, preventing the job from failing.

Additionally, the Telegram notification message has been updated to use the abbreviation "PR" instead of "Pull Request" for conciseness.

--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -110,7 +110,7 @@ jobs:
       
       - name: Load Docker Image
         run: |
-          docker load -i backend_ci_build.tar
+          docker load -i backend_build_ci.tar
       
       - name: Run Trivy Scan
         uses: aquasecurity/trivy-action@0.28.0
@@ -136,7 +136,7 @@ jobs:
           to: ${{ secrets.TELEGRAM_CHAT_ID }}
           token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           message: |
-            ⚙️ Pull Request Notifier From Backend CI
+            ⚙️ PR Notifier From Backend CI
 
             🧹 Lint Test: ${{ needs.Lint.result }}
             🧪 Unit Test: ${{ needs.Test.result }}
