--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -115,7 +115,7 @@ jobs:
       - name: Run Trivy Scan
         uses: aquasecurity/trivy-action@0.28.0
         with:
-          image-ref: backend-ci-build
+          image-ref: backend:ci-build
           format: 'table'
           exit-code: '1'
           ignore-unfixed: true
