refactor(ci): Decouple frontend build from CD workflow
This commit refactors the frontend CI/CD pipeline to separate the build and deployment processes. The CD workflow now builds the Docker image directly from the source code instead of relying on an artifact from the CI run.

Previously, the CI workflow built the image and uploaded it as an artifact, which the CD workflow would then download and push.

Changes:
- Removed the `docker save` and `upload-artifact` steps from the CI workflow (`frontend-ci.yaml`).
- Modified the CD workflow (`frontend-cd.yaml`) to perform a fresh `docker build` before pushing the image to Docker Hub.
- Added a Telegram notification job to the CD workflow to provide status updates on deployments.

This decoupling simplifies the pipeline by removing the dependency on artifacts, making the CD process more self-contained and ensuring the deployed image is always built from the correct source.

--- a/.github/workflows/frontend-ci.yaml
+++ b/.github/workflows/frontend-ci.yaml
@@ -24,6 +24,7 @@ permissions:
 
 #workflow jobs
 jobs:
+
   Lint: #Job name
     name: Lint test
     runs-on: ubuntu-latest
@@ -48,6 +49,7 @@ jobs:
         working-directory: frontend
         run: npm run lint  #run lint command
     
+
   Test: 
     name: Test Frontend
     runs-on: ubuntu-latest
@@ -73,6 +75,7 @@ jobs:
         working-directory: frontend
         run: npm test -- --watch=false
 
+
   Build-Scan:
     name: Build And Scan Docker Image
     runs-on: ubuntu-latest
@@ -90,6 +93,7 @@ jobs:
           docker build \
           -t frontend:ci-build \
           ./frontend
+
       - name: Run Trivy vulnurability scan
         uses: aquasecurity/trivy-action@0.28.0
         with:
@@ -108,17 +112,7 @@ jobs:
           name: trivy-frontend-report
           path: trivy-report.txt
         if: always()
-      - name: Save image as artifact
-        if: success()
-        run: |
-          docker save frontend:ci-build -o frontend_ci_build.tar
 
-      - name: Upload Image Artifact
-        if: success()
-        uses: actions/upload-artifact@v4
-        with:
-          name: frontend-image-clean
-          path: frontend_ci_build.tar
 
   Notify-On-Telegram:
     name: Notify on Telegram
@@ -133,12 +127,15 @@ jobs:
           to: ${{ secrets.TELEGRAM_CHAT_ID }}
           token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           message: |
-            ⚙️ Pull Request Notifier From Frontend CI
+            ⚙️ *PR Notifier Frontend*
 
-            🧹 Lint Test: ${{ needs.Lint.result }}
-            🧪 Unit Test: ${{ needs.Test.result }}
-            🔨 Docker Image Build: ${{ needs.Build-Scan.result }}
+            🧹 Lint Status: *${{ needs.Lint.result }}*
+            🧪 Unit Test Status: *${{ needs.Test.result }}*
+            🐳 Docker Build & Trivy Scan: *${{ needs.Build-Scan.result }}*
 
             🔁 Branch: `${{ github.ref_name }}`
             🧑‍💻 Triggered by: `${{ github.actor }}`
             📦 Repository: `${{ github.repository }}`
+            🔗 PR Link: ${{ github.event.pull_request.html_url }}
+
+            ✔️ CI workflow finished. Review results above.
