--- a/.github/workflows/frontend-cd.yaml
+++ b/.github/workflows/frontend-cd.yaml
@@ -1,8 +1,11 @@
+#workflow name
 name: Frontend CD
 
+#workflow metadata - manual or can be automated later
 on:
   workflow_dispatch:
-  
+
+#workflow settings - prevent overlapping deployments
 concurrency:
   group: frontend-cd-${{ github.ref }}
   cancel-in-progress: true
@@ -14,34 +17,63 @@ permissions:
 
 jobs:
 
-  Push-Image:
-    name: Push Image to Dockerhub
+  Build-and-Push:
+    name: Build and Push Frontend Image
     runs-on: ubuntu-latest
-
+    
     steps:
-      - name: Download Artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: frontend-image-clean
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Load Docker Image
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      # Build the production Docker image
+      - name: Build Docker Image
         run: |
-          docker load -i front_ci_build.tar
-      
+          docker build \
+          -t frontend:prod-build \
+          ./frontend
+
+      # Login to Docker Hub using secrets
       - name: Dockerhub Login
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME}}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN}}
-        
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
+      # Tag the image for Docker Hub
       - name: Tag Docker Image
         run: |
-          docker tag frontend:ci-build ${{ secrets.DOCKER_HUB_USERNAME }}/ecom:frontend-${{ secrets.IMAGE_TAG_VERSION }}
+          docker tag frontend:prod-build \
+          ${{ secrets.DOCKER_HUB_USERNAME }}/ecom:frontend-${{ secrets.IMAGE_TAG_VERSION }}
 
-      - name: Push Docker image
+      # Push the tagged image to Docker Hub
+      - name: Push Docker Image
         run: |
           docker push ${{ secrets.DOCKER_HUB_USERNAME }}/ecom:frontend-${{ secrets.IMAGE_TAG_VERSION }}
 
-      
+  # Optional notifier job
+  Notify:
+    name: Notify on Telegram
+    runs-on: ubuntu-latest
+    needs: Build-and-Push
+    if: always()   # Run even if deployment failed
 
-      
+    steps:
+      - name: Send Telegram Notification
+        uses: appleboy/telegram-action@v0.1.0
+        with:
+          to: ${{ secrets.TELEGRAM_CHAT_ID }}
+          token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          message: |
+            📦 *Frontend CD Status*
+
+            🐳 Docker Push: *${{ needs.Build-and-Push.result }}*
+
+            🔁 Branch: `${{ github.ref_name }}`
+            👤 Triggered by: `${{ github.actor }}`
+            🔢 Image Tag: `frontend-${{ secrets.IMAGE_TAG_VERSION }}`
+            📦 Repo: `${{ github.repository }}`
+
+            ✔️ CD workflow finished.
