ci(workflows): Decouple backend CI and CD image build process
This commit refactors the backend CI/CD pipeline to build the Docker image directly within the CD workflow, rather than passing it as an artifact from CI. This change simplifies the CI process and streamlines the deployment pipeline.

Key changes:

- **backend-cd.yaml:**
  - The CD workflow now checks out the source code and builds the Docker image from scratch.
  - Removed the previous steps of downloading and loading an image artifact from the CI run.
  - Added a new `Notify` job to send a detailed deployment status report to Telegram.

- **backend-ci.yaml:**
  - Removed the steps for saving and uploading the Docker image as an artifact, making the CI job faster and more focused on validation.
  - Significantly improved the Telegram notification format for better readability and more detailed CI run information.

--- a/.github/workflows/frontend-cd.yaml
+++ b/.github/workflows/frontend-cd.yaml
@@ -67,13 +67,30 @@ jobs:
           to: ${{ secrets.TELEGRAM_CHAT_ID }}
           token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           message: |
-            📦 *Frontend CD Status*
+            🚀 *Frontend Deployment Report (CD)*
 
-            🐳 Docker Push: *${{ needs.Build-and-Push.result }}*
+            🧱 *Build & Push Status*
+            ├─ Docker Build: *${{ needs.Build-and-Push.result }}*
+            ├─ Docker Push: *${{ needs.Build-and-Push.result }}*
+            └─ Image Tag: `frontend-${{ secrets.IMAGE_TAG_VERSION }}`
 
-            🔁 Branch: `${{ github.ref_name }}`
-            👤 Triggered by: `${{ github.actor }}`
-            🔢 Image Tag: `frontend-${{ secrets.IMAGE_TAG_VERSION }}`
-            📦 Repo: `${{ github.repository }}`
+            🐳 *Image Details*
+            ├─ Repository: `${{ secrets.DOCKER_HUB_USERNAME }}/ecom`
+            ├─ Tag: `frontend-${{ secrets.IMAGE_TAG_VERSION }}`
+            └─ Branch: `${{ github.ref_name }}`
 
-            ✔️ CD workflow finished.
+            📌 *Commit Info*
+            ├─ Author: `${{ github.actor }}`
+            ├─ SHA: `${{ github.sha }}`
+            └─ Message: "${{ github.event.head_commit.message }}"
+
+            🔗 *Links*
+            ├─ Repo: https://github.com/${{ github.repository }}
+            └─ Workflow Run: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+
+            🕒 *Timestamp*
+            └─ `${{ github.event.head_commit.timestamp }}`
+
+            📦 *Deployment Complete*
+            ✔️ The Frontend CD workflow has finished. Review the details above.
+
