--- a/.github/workflows/backend-cd.yaml
+++ b/.github/workflows/backend-cd.yaml
@@ -13,30 +13,79 @@ permissions:
   packages: write
 
 jobs:
-  Push-Image:
-    name: Push Image to Dockerhub
+  Build-and-Push:
+    name: Build and Push Backend Image
     runs-on: ubuntu-latest
-
+    
     steps:
-      - name: Download Artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: backend-image-clean
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Load Docker Image
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      # Build the production Docker image
+      - name: Build Docker Image
         run: |
-          docker load -i backend_ci_build.tar
+          docker build \
+          -t backend:prod-build \
+          ./frontend
 
+      # Login to Docker Hub using secrets
       - name: Dockerhub Login
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME}}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN}}
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
+      # Tag the image for Docker Hub
       - name: Tag Docker Image
         run: |
-          docker tag frontend:ci-build ${{ secrets.DOCKER_HUB_USERNAME }}/ecom:frontend-${{ secrets.IMAGE_TAG_VERSION }}
+          docker tag backend:prod-build \
+          ${{ secrets.DOCKER_HUB_USERNAME }}/ecom:backend-${{ secrets.IMAGE_TAG_VERSION }}
 
-      - name: Push Docker image
+      # Push the tagged image to Docker Hub
+      - name: Push Docker Image
         run: |
-          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/ecom:frontend-${{ secrets.IMAGE_TAG_VERSION }}
+          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/ecom:backend-${{ secrets.IMAGE_TAG_VERSION }}
+
+  # Optional notifier job
+  Notify:
+    name: Notify on Telegram
+    runs-on: ubuntu-latest
+    needs: Build-and-Push
+    if: always()   # Run even if deployment failed
+
+    steps:
+      - name: Send Telegram Notification
+        uses: appleboy/telegram-action@v0.1.0
+        with:
+          to: ${{ secrets.TELEGRAM_CHAT_ID }}
+          token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          message: |
+            🚀 *backend Deployment Report (CD)*
+
+            🧱 *Build & Push Status*
+            ├─ Docker Build: *${{ needs.Build-and-Push.result }}*
+            ├─ Docker Push: *${{ needs.Build-and-Push.result }}*
+            └─ Image Tag: `frontend-${{ secrets.IMAGE_TAG_VERSION }}`
+
+            🐳 *Image Details*
+            ├─ Repository: `${{ secrets.DOCKER_HUB_USERNAME }}/ecom`
+            ├─ Tag: `frontend-${{ secrets.IMAGE_TAG_VERSION }}`
+            └─ Branch: `${{ github.ref_name }}`
+
+            📌 *Commit Info*
+            ├─ Author: `${{ github.actor }}`
+            ├─ SHA: `${{ github.sha }}`
+            └─ Message: "${{ github.event.head_commit.message }}"
+
+            🔗 *Links*
+            ├─ Repo: https://github.com/${{ github.repository }}
+            └─ Workflow Run: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+
+            🕒 *Timestamp*
+            └─ `${{ github.event.head_commit.timestamp }}`
+
+            📦 *Deployment Complete*
+            ✔️ The Frontend CD workflow has finished. Review the details above.
