--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -103,16 +103,6 @@ jobs:
           name: trivy-frontend-report
           path: trivy-report.txt
         if: always()
-      - name: Save image as artifact
-        run: |
-          docker save backend:ci-build -o backend_build_ci.tar
-
-      - name: Upload image as artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: backend-image-clean
-          path: backend_build_ci.tar
-
   Notify-On-Telegram:
     name: Notify on Telegram
     runs-on: ubuntu-latest
@@ -126,12 +116,28 @@ jobs:
           to: ${{ secrets.TELEGRAM_CHAT_ID }}
           token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           message: |
-            ⚙️ PR Notifier From Backend CI
+            ⚙️ *Backend PR CI Report*
 
-            🧹 Lint Test: ${{ needs.Lint.result }}
-            🧪 Unit Test: ${{ needs.Test.result }}
-            🔨 Docker Image Build: ${{ needs.Build-Scan.result }}
+            🧪 *CI Status Summary*
+            ├─ 🧹 Lint: *${{ needs.Lint.result }}*
+            ├─ 🧪 Tests: *${{ needs.Test.result }}*
+            └─ 🐳 Docker Build & Trivy Scan: *${{ needs.Build-Scan.result }}*
 
-            🔁 Branch: `${{ github.ref_name }}`
-            🧑‍💻 Triggered by: `${{ github.actor }}`
-            📦 Repository: `${{ github.repository }}`
+            🔍 *Pull Request Details*
+            ├─ Title: *${{ github.event.pull_request.title }}*
+            ├─ Author: `${{ github.actor }}`
+            └─ PR Link: ${{ github.event.pull_request.html_url }}
+
+            📌 *Commit Info*
+            ├─ SHA: `${{ github.sha }}`
+            └─ Message: "${{ github.event.pull_request.head.sha && github.event.pull_request.title }}"
+
+            🌿 *Branch Information*
+            ├─ Source Branch: `${{ github.head_ref }}`
+            └─ Target Branch: `${{ github.base_ref }}`
+
+            🔗 *Workflow Links*
+            └─ Run Logs: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+
+            ✔️ *CI Completed*
+            Review results above before merging.
