--- a/.github/workflows/frontend-ci.yaml
+++ b/.github/workflows/frontend-ci.yaml
@@ -127,15 +127,29 @@ jobs:
           to: ${{ secrets.TELEGRAM_CHAT_ID }}
           token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           message: |
-            ⚙️ *PR Notifier Frontend*
+            ⚙️ *Frontend PR CI Report*
 
-            🧹 Lint Status: *${{ needs.Lint.result }}*
-            🧪 Unit Test Status: *${{ needs.Test.result }}*
-            🐳 Docker Build & Trivy Scan: *${{ needs.Build-Scan.result }}*
+            🧪 *CI Status Summary*
+            ├─ 🧹 Lint: *${{ needs.Lint.result }}*
+            ├─ 🧪 Tests: *${{ needs.Test.result }}*
+            └─ 🐳 Docker Build & Trivy Scan: *${{ needs.Build-Scan.result }}*
 
-            🔁 Branch: `${{ github.ref_name }}`
-            🧑‍💻 Triggered by: `${{ github.actor }}`
-            📦 Repository: `${{ github.repository }}`
-            🔗 PR Link: ${{ github.event.pull_request.html_url }}
+            🔍 *Pull Request Details*
+            ├─ Title: *${{ github.event.pull_request.title }}*
+            ├─ Author: `${{ github.actor }}`
+            └─ PR Link: ${{ github.event.pull_request.html_url }}
 
-            ✔️ CI workflow finished. Review results above.
+            📌 *Commit Info*
+            ├─ SHA: `${{ github.sha }}`
+            └─ Message: "${{ github.event.pull_request.head.sha && github.event.pull_request.title }}"
+
+            🌿 *Branch Information*
+            ├─ Source Branch: `${{ github.head_ref }}`
+            └─ Target Branch: `${{ github.base_ref }}`
+
+            🔗 *Workflow Links*
+            └─ Run Logs: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+
+            ✔️ *CI Completed*
+            Review results above before merging.
+
