--- a/.github/workflows/backend-cd.yaml
+++ b/.github/workflows/backend-cd.yaml
@@ -29,7 +29,7 @@ jobs:
         run: |
           docker build \
           -t backend:prod-build \
-          ./frontend
+          ./backend
 
       # Login to Docker Hub using secrets
       - name: Dockerhub Login
@@ -68,11 +68,11 @@ jobs:
             🧱 *Build & Push Status*
             ├─ Docker Build: *${{ needs.Build-and-Push.result }}*
             ├─ Docker Push: *${{ needs.Build-and-Push.result }}*
-            └─ Image Tag: `frontend-${{ secrets.IMAGE_TAG_VERSION }}`
+            └─ Image Tag: `backend-${{ secrets.IMAGE_TAG_VERSION }}`
 
             🐳 *Image Details*
             ├─ Repository: `${{ secrets.DOCKER_HUB_USERNAME }}/ecom`
-            ├─ Tag: `frontend-${{ secrets.IMAGE_TAG_VERSION }}`
+            ├─ Tag: `backend-${{ secrets.IMAGE_TAG_VERSION }}`
             └─ Branch: `${{ github.ref_name }}`
 
             📌 *Commit Info*
