refactor(ci): simplify Telegram notification messages
The Telegram notification messages for CI and CD workflows have been significantly shortened and simplified.

The previous format was overly verbose, containing detailed sections for build status, image details, and commit info. This made the notifications noisy and difficult to parse quickly.

This change streamlines the messages to present only the most critical information, such as job status and branch, improving readability and reducing clutter in the notification channel.

Additionally, a minor typo in the backend CD workflow's job name has been corrected.

--- a/.github/workflows/backend-cd.yaml
+++ b/.github/workflows/backend-cd.yaml
@@ -14,7 +14,7 @@ permissions:
 
 jobs:
   Build-and-Push:
-    name: Build and Push Backend Image
+    name: Build and Push Frontend Image
     runs-on: ubuntu-latest
     
     steps:
@@ -63,29 +63,14 @@ jobs:
           to: ${{ secrets.TELEGRAM_CHAT_ID }}
           token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           message: |
-            🚀 *backend Deployment Report (CD)*
+            📦 *Backend CD Status*
 
-            🧱 *Build & Push Status*
-            ├─ Docker Build: *${{ needs.Build-and-Push.result }}*
-            ├─ Docker Push: *${{ needs.Build-and-Push.result }}*
-            └─ Image Tag: `backend-${{ secrets.IMAGE_TAG_VERSION }}`
+            🐳 Docker Push: *${{ needs.Build-and-Push.result }}*
 
-            🐳 *Image Details*
-            ├─ Repository: `${{ secrets.DOCKER_HUB_USERNAME }}/ecom`
-            ├─ Tag: `backend-${{ secrets.IMAGE_TAG_VERSION }}`
-            └─ Branch: `${{ github.ref_name }}`
+            🔁 Branch: `${{ github.ref_name }}`
+            👤 Triggered by: `${{ github.actor }}`
+            🔢 Image Tag: `backend-${{ secrets.IMAGE_TAG_VERSION }}`
+            📦 Repo: `${{ github.repository }}`
 
-            📌 *Commit Info*
-            ├─ Author: `${{ github.actor }}`
-            ├─ SHA: `${{ github.sha }}`
-            └─ Message: "${{ github.event.head_commit.message }}"
+            ✔️ CD workflow finished.
 
-            🔗 *Links*
-            ├─ Repo: https://github.com/${{ github.repository }}
-            └─ Workflow Run: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
-
-            🕒 *Timestamp*
-            └─ `${{ github.event.head_commit.timestamp }}`
-
-            📦 *Deployment Complete*
-            ✔️ The Frontend CD workflow has finished. Review the details above.
