ci(workflows): Automate CD on main push and improve notifications
This commit introduces two main improvements to the CI/CD pipelines: automating CD triggers and enhancing Telegram notifications.

The backend and frontend CD workflows are now configured to automatically trigger on any push to the `main` branch. This change streamlines the deployment process, moving from manual triggers to a continuous deployment model.

Additionally, the Telegram notifications across all CI/CD workflows have been refined for better clarity and consistency:
- Markdown formatting has been removed to prevent rendering issues.
- The backend CI notification now includes a direct link to the pull request.
- Message structure and icons have been standardized for improved readability.

--- a/.github/workflows/backend-cd.yaml
+++ b/.github/workflows/backend-cd.yaml
@@ -2,6 +2,10 @@ name: Backend CD
 
 on:
   workflow_dispatch:
+  
+  push:
+    branches:
+      - main
 
 concurrency:
   group: backend-cd-${{ github.ref }}
@@ -63,14 +67,17 @@ jobs:
           to: ${{ secrets.TELEGRAM_CHAT_ID }}
           token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           message: |
-            📦 *Backend CD Status*
+            ⚙️ Backend CD Status
 
-            🐳 Docker Push: *${{ needs.Build-and-Push.result }}*
+            🐳 Docker Push: ${{ needs.Build-and-Push.result }}
 
-            🔁 Branch: `${{ github.ref_name }}`
-            👤 Triggered by: `${{ github.actor }}`
-            🔢 Image Tag: `backend-${{ secrets.IMAGE_TAG_VERSION }}`
-            📦 Repo: `${{ github.repository }}`
+            🔁 Branch: ${{ github.ref_name }}
+
+            👤 Triggered by: ${{ github.actor }}
+
+            🔢 Image Tag: backend-${{ secrets.IMAGE_TAG_VERSION }}
+
+            📦 Repo: ${{ github.repository }}
 
             ✔️ CD workflow finished.
 
