ci: Optimize CD workflow triggers using path filtering
This commit optimizes the Continuous Delivery (CD) workflows for both backend and frontend applications by adding `paths` filtering.

Previously, these workflows would run on every push to the `main` branch, regardless of the changed files. This change introduces `paths` to trigger the `backend-cd.yaml` workflow only when changes occur within the `backend/` directory or the workflow file itself. Similarly, the `frontend-cd.yaml` workflow will now only trigger for changes within `frontend/` or its own workflow file.

This improves efficiency by preventing unnecessary CD runs when unrelated parts of the repository are modified.

--- a/.github/workflows/backend-cd.yaml
+++ b/.github/workflows/backend-cd.yaml
@@ -6,6 +6,9 @@ on:
   push:
     branches:
       - main
+    paths:
+      - "backend/**"
+      - ".github/workflows/backend-cd.yaml"
 
 concurrency:
   group: backend-cd-${{ github.ref }}
@@ -74,6 +77,6 @@ jobs:
             👤 Triggered by: ${{ github.actor }}
             🔢 Image Tag: backend-${{ secrets.IMAGE_TAG_VERSION }}
             📦 Repo: ${{ github.repository }}
-            
+
             ✔️ CD workflow finished.
 
