feat: Implement EC2 deployment and runtime API configuration
This commit introduces significant changes to the frontend deployment strategy.

The GitHub Actions workflow for frontend continuous deployment has been updated to include a `Deploy-on-EC2` job. This job uses `appleboy/ssh-action` to connect to an EC2 instance and pull the latest Docker image, enabling automatic deployment. The previous `Notify` job has been removed.

Furthermore, the frontend now supports dynamic runtime configuration of the backend API URL.
- A new `RUNTIME_CONFIG.md` file has been added to document this process.
- The `Dockerfile` and `entrypoint.sh` have been modified to allow the `VITE_API_URL` to be set via an environment variable at container startup, eliminating the need for a rebuild when the backend URL changes.
- The `docker-compose.yaml` in the `deployment` directory has been updated to reflect this new configuration method and provides examples for both building from source and using a pre-built image. The `NODE_ENV: production` environment variable has been removed as it's no longer necessary with the new setup.

--- a/deployment/docker-compose.yaml
+++ b/deployment/docker-compose.yaml
@@ -17,8 +17,12 @@ services:
       - ecom-network
 
   frontend:
+    # Option 1: Build from Dockerfile (for development)
     build: ../frontend
-    # image: deployment-frontend:latest
+    
+    # Option 2: Use prebuilt image (uncomment this and comment out 'build' above)
+    # image: your-registry/ecom-frontend:latest
+    
     restart: always
     container_name: frontend
     ports:
@@ -26,7 +30,6 @@ services:
     depends_on:
       - backend
     environment:
-      NODE_ENV: production
       VITE_API_URL: "http://localhost:5000"
     networks:
       - ecom-network
