--- a/.github/workflows/frontend-cd.yaml
+++ b/.github/workflows/frontend-cd.yaml
@@ -59,27 +59,18 @@ jobs:
       - name: Push Docker Image
         run: |
           docker push ${{ secrets.DOCKER_HUB_USERNAME }}/ecom:frontend-${{ secrets.IMAGE_TAG_VERSION }}
-
-  # Optional notifier job
-  Notify:
-    name: Notify on Telegram
+  
+  Deploy-on-EC:
+    name: Deploy on EC2
     runs-on: ubuntu-latest
     needs: Build-and-Push
-    if: always()   # Run even if deployment failed
-
     steps:
-      - name: Send Telegram Notification
-        uses: appleboy/telegram-action@v0.1.0
+      - name: SSH inro EC2 and Deploy
+        uses: appleboy/ssh-action@v1.0.3
         with:
-          to: ${{ secrets.TELEGRAM_CHAT_ID }}
-          token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-          message: |
-            ⚙️ Frontend CD Status
-
-            🐳 Docker Push: ${{ needs.Build-and-Push.result }}
-            🔁 Branch: ${{ github.ref_name }}
-            👤 Triggered by: ${{ github.actor }}
-            🔢 Image Tag: frontend-${{ secrets.IMAGE_TAG_VERSION }}
-            📦 Repo: ${{ github.repository }}
-
-            ✔️ CD workflow finished.
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USERNAME }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            cd /home/${{secrets.EC2_USERNAME }}/app
+            docker compose pull
