--- a/.github/workflows/frontend-cd.yaml
+++ b/.github/workflows/frontend-cd.yaml
@@ -60,7 +60,7 @@ jobs:
         run: |
           docker push ${{ secrets.DOCKER_HUB_USERNAME }}/ecom:frontend-${{ secrets.IMAGE_TAG_VERSION }}
   
-  Deploy-on-EC:
+  Deploy-on-EC2:
     name: Deploy on EC2
     runs-on: ubuntu-latest
     needs: Build-and-Push
@@ -73,4 +73,16 @@ jobs:
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
             cd /home/${{ secrets.EC2_USERNAME }}/app
-            docker compose pull
+            echo "Logging in to Docker Hub..."
+            docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} -p ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
+            echo "Pulling latest frontend image..."
+            docker compose pull frontend
+
+            echo "Recreating frontend container..."
+            docker compose up -d frontend
+
+            echo "Removing old unused images..."
+            docker image prune -f
+
+            echo "Frontend deployment completed!"
