--- a/.github/workflows/ec2-setup.yaml
+++ b/.github/workflows/ec2-setup.yaml
@@ -1,18 +1,17 @@
 name: EC2 Setup (Copy Compose Files)
 
 on:
-  workflow_dispatch:   # run manually anytime
+  workflow_dispatch:
 
 jobs:
   copy-deployment-files:
-    name: Copy docker-compose
+    name: Copy docker-compose to EC2
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Copy everything inside deployment/prod to EC2:/home/ubuntu/app
       - name: Copy deployment folder to EC2
         uses: appleboy/scp-action@v0.1.7
         with:
@@ -22,31 +21,35 @@ jobs:
           source: "deployment/prod/*"
           target: "/home/${{ secrets.EC2_USERNAME }}/app"
 
-      # Optional: Ensure Docker + Docker Compose are installed
-      - name: Setup EC2 for Docker (Optional)
+      - name: Install Docker & Compose on EC2 (Amazon Linux)
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            # Install Docker if not installed
+            # Install Docker if missing
             if ! command -v docker &> /dev/null
             then
               echo "Installing Docker..."
-              sudo apt update
-              sudo apt install -y docker.io
+              sudo yum update -y
+              sudo amazon-linux-extras install docker -y
+              sudo systemctl enable docker
+              sudo systemctl start docker
+              sudo usermod -aG docker $USER
             fi
 
-            # Install Docker Compose if not installed
-            if ! command -v docker compose &> /dev/null
+            # Install Docker Compose v2 if missing
+            if ! docker compose version &> /dev/null
             then
-              echo "Installing Docker Compose..."
-              sudo curl -L "https://github.com/docker/compose/releases/download/v2.29.2/docker-compose-linux-x86_64" -o /usr/local/bin/docker-compose
-              sudo chmod +x /usr/local/bin/docker-compose
+              echo "Installing Docker Compose v2..."
+              sudo mkdir -p /usr/libexec/docker/cli-plugins/
+              sudo curl -SL https://github.com/docker/compose/releases/download/v2.29.2/docker-compose-linux-x86_64 \
+                -o /usr/libexec/docker/cli-plugins/docker-compose
+              sudo chmod +x /usr/libexec/docker/cli-plugins/docker-compose
             fi
 
-            # Create the app folder if missing
+            # Create deployment folder if missing
             mkdir -p /home/${{ secrets.EC2_USERNAME }}/app
 
-            echo "Setup completed!"
+            echo "EC2 Setup Completed Successfully!"
