ci: Refactor EC2 setup to run application directly
Refactored the EC2 setup workflow to streamline application deployment.

Removed the manual Docker and Docker Compose installation steps from the EC2 setup workflow. These dependencies are now assumed to be pre-installed or handled by a separate provisioning step.

The workflow now directly navigates to the application directory, logs into Docker Hub, pulls the latest Docker images, and starts the application using Docker Compose. It also includes a command to prune unused Docker images, optimizing resource usage.

This change simplifies the CI/CD pipeline, focusing the `ec2-setup.yaml` on application deployment rather than environment provisioning.

--- a/.github/workflows/ec2-setup.yaml
+++ b/.github/workflows/ec2-setup.yaml
@@ -21,35 +21,23 @@ jobs:
           source: "deployment/prod/*"
           target: "/home/${{ secrets.EC2_USERNAME }}/app"
 
-      - name: Install Docker & Compose on EC2 (Amazon Linux)
+      - name: Run Entire Application
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            # Install Docker if missing
-            if ! command -v docker &> /dev/null
-            then
-              echo "Installing Docker..."
-              sudo yum update -y
-              sudo amazon-linux-extras install docker -y
-              sudo systemctl enable docker
-              sudo systemctl start docker
-              sudo usermod -aG docker $USER
-            fi
+            cd /home/${{ secrets.EC2_USERNAME }}/app
 
-            # Install Docker Compose v2 if missing
-            if ! docker compose version &> /dev/null
-            then
-              echo "Installing Docker Compose v2..."
-              sudo mkdir -p /usr/libexec/docker/cli-plugins/
-              sudo curl -SL https://github.com/docker/compose/releases/download/v2.29.2/docker-compose-linux-x86_64 \
-                -o /usr/libexec/docker/cli-plugins/docker-compose
-              sudo chmod +x /usr/libexec/docker/cli-plugins/docker-compose
-            fi
+            # Login to Docker Hub if needed
+            docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} -p ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
-            # Create deployment folder if missing
-            mkdir -p /home/${{ secrets.EC2_USERNAME }}/app
+            # Pull all images defined in docker-compose.yml
+            docker compose pull
 
-            echo "EC2 Setup Completed Successfully!"
+            # Start or recreate all services
+            docker compose up -d
+
+            # Clean only unused images
+            docker image prune -f
