fix(workflows): Update EC2 target path and fix typo
The `ec2-setup.yaml` workflow's target path for deployment was updated to ensure consistent directory handling. A trailing slash was added to `/home/${{ secrets.EC2_USERNAME }}/app` to explicitly denote it as a directory.

Additionally, a typo in the `frontend-cd.yaml` workflow was corrected, changing "SSH inro EC2 and Deploy" to "SSH into EC2 and Deploy" for improved clarity.

--- a/.github/workflows/ec2-setup.yaml
+++ b/.github/workflows/ec2-setup.yaml
@@ -19,7 +19,7 @@ jobs:
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_SSH_KEY }}
           source: "deployment/prod/*"
-          target: "/home/${{ secrets.EC2_USERNAME }}/app"
+          target: "/home/${{ secrets.EC2_USERNAME }}/app/"
 
       - name: Run Entire Application
         uses: appleboy/ssh-action@v1.0.3
