--- a/.github/workflows/frontend-cd.yaml
+++ b/.github/workflows/frontend-cd.yaml
@@ -65,7 +65,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: Build-and-Push
     steps:
-      - name: SSH inro EC2 and Deploy
+      - name: SSH into EC2 and Deploy
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.EC2_HOST }}
